# musical-spoon

./: docker-compose.yml
apps/auth/: .dockerignore  Dockerfile  Makefile  mypy.ini  pyproject.toml
apps/auth/src/: setup.py
apps/auth/src/auth/: dependencies.py  exceptions.py  main.py  middlewares.py  models.py  router.py  settings.py
apps/auth/src/auth/dependencies/: __init__.py  auth.py  db.py  http.py  jwt.py
apps/auth/tests/: conftest.py
apps/auth/tests/e2e/: test_auth.py  test_signin.py  test_signup.py
apps/events/: .gitignore  Dockerfile  Makefile  mypy.ini  pyproject.toml
apps/events/src/: setup.py
apps/events/src/events/: main.py  router.py  views.py
apps/events/src/events/adapters/: eventconsumer.py  eventpublisher.py
apps/events/src/events/domain/: commands.py  events.py  model.py
apps/events/src/events/entrypoints/: eventconsumer.py
apps/events/src/events/entrypoints/fastapi/: main.py  middlewares.py  queries.py  settings.py
apps/events/src/events/entrypoints/fastapi/dependencies/: bus.py  db.py  http.py
apps/events/src/events/entrypoints/fastapi/routers/: admin.py  user.py
apps/events/src/events/service_layer/: handlers.py  messagebus.py  unit_of_work.py
apps/events/tests/: conftest.py
apps/events/tests/e2e/: test_api.py  test_eventpublisher.py
apps/events/tests/integration/: test_eventconsumer.py  test_eventtable.py  test_handlers.py  test_uow.py
apps/events/tests/unit/: test_commands.py  test_eventbase.py
apps/orders/: Dockerfile  conftest.py  mypy.ini  pyproject.toml
apps/orders/src/: setup.py
apps/orders/src/orders/: bootstrap.py  logger.py  main.py  settings.py
apps/orders/src/orders/adapters/: eventpublisher.py  repository.py
apps/orders/src/orders/domain/: commands.py  dtos.py  events.py  model.py
apps/orders/src/orders/entrypoints/fastapi/: exceptions.py  main.py  middlewares.py  models.py  router.py
apps/orders/src/orders/entrypoints/fastapi/dependencies/: bus.py  db.py  http.py
apps/orders/src/orders/service_layer/: handlers.py  messagebus.py  unit_of_work.py
apps/orders/tests/: conftest.py
apps/orders/tests/e2e/: test_api.py
apps/orders/tests/integration/: test_handlers.py  test_orm.py  test_repository.py  test_uow.py
apps/orders/tests/unit/: test_orders.py  test_tickets.py
auth/: pyproject.toml
core/traefik/: dinamic-config.yml  traefik.yml
