[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [""]
description = ""
name = ""
readme = "README.md"
version = ""

[tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--reuse-db"
env = [

]
filterwarnings = [

]
markers = [

]
python_files = "test*.py"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
