[project]
name="auth"
version="0.1.0"
description="Auth microservice"
readme="README.md"
requires-python=">=3.13"
dependencies=[
    "bcrypt==4.0.1",
    "fastapi>=0.115.11",
    "motor>=3.7.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev=[
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.9",
    "testcontainers>=4.9.2",
    "types-passlib>=1.7.7.20241221",
]

[tool.ruff]
line-length=120

[tool.ruff.format]
quote-style="single"

[tool.ruff.lint]
extend-select = [
    "FAST",
    "ASYNC",
]

[tool.pytest.ini_options]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
markers=[
    "e2e: marks tests as end-to-end tests",
]
testpaths=[
    "tests"
]
