[project]
name="events"
version="0.1.0"
description="Events microservice"
readme="README.md"
requires-python=">=3.13"
dependencies=[
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev=[
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length=120

[tool.ruff.format]
quote-style="single"

[tool.ruff.lint]
extend-select = [
    "FAST",
    "ASYNC",
]