[project]
name="orders"
version="0.1.0"
description="Orders microservice"
readme="README.md"
requires-python=">=3.13"
dependencies=[
    "aio-pika>=9.5.5",
    "asyncpg>=0.30.0",
    "bson>=0.5.10",
    "fastapi>=0.115.11",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev=[
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pika>=1.3.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-icdiff>=0.9",
    "pytest-randomly>=3.16.0",
    "pytest-repeat>=0.9.4",
    "pytest-timeout>=2.3.1",
    "ruff>=0.9.9",
    "testcontainers>=4.10.0",
    "yarl>=1.18.3",
]

[tool.ruff]
fix=true
unsafe-fixes=true
line-length=120
select=["ALL"]
ignore=["D1", "D203", "D213", "FA102", "ANN101", "Q000", "PGH003", "A002", "TID252"] 

[tool.ruff.format]
quote-style="single"

[tool.ruff.isort] 
no-lines-before=["standard-library", "local-folder"]
known-third-party=[]
known-local-folder=["whole_app"]

[tool.ruff.extend-per-file-ignores]
"tests/*.py"=["ANN401", "S101", "S311", "ANN", "PLR2004"]

[tool.pytest.ini_options]
timeout=30
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="function"
asyncio_default_test_loop_scope="function"
markers=[
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
testpaths=[
    "tests"
]
